--- a/index.html
+++ b/index.html
@@ -29,5 +29,10 @@
             Bla Bla;<br>
             Bla Bla;<br>
         </p>
-    </body>
-</html>
+        <hr>
+        <h1>Formação Acadêmica</h1>
+        <p>Técnico em Informática para Internet pelo Instituto Federal do Paraná (2020) e Tecnologo em Análise e Desenvolvimento de 
+            Sistemas pela Universidade Tecnologica Federal do Paraná (2024).</p>
+            <hr>
+            <h1>Experiência Profissional</h1>
+            <p>Empresa X (2021-2022)</p>
