--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <hr>
-        <img src="/images/avatar.png" width="120" height="120">
+        <img src="./images/avatar.png" width="120" height="120">
         <h1>NOME FULANO</h1>
         <hr>
         <h2>Perfil</h2>
@@ -36,3 +36,4 @@
             <hr>
             <h1>Experiência Profissional</h1>
             <p>Empresa X (2021-2022)</p>
+</html>
