--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
         <p>Técnico em Informática para Internet pelo Instituto Federal do Paraná (2020) e Tecnologo em Análise e Desenvolvimento de 
             Sistemas pela Universidade Tecnologica Federal do Paraná (2024).</p>
             <hr>
-            <h1>Experiência Profissional</h1>
+            <h2>Experiência Profissional</h2>
             <p>Empresa X (2021-2022)</p>
+            <p>Emoresa Y (2022-2024)</p>
+            <p>Empresa Z (2024-Atual)</p>
+            <hr>
+
+            <h2>Contato</h2>
+            <p>Rua Joao da Silva, Santo Angelo, Telêmaco Borba, Paraná</p>
+    </body>            
 </html>
