--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
             <hr>
 
             <h2>Contato</h2>
-            <p>Rua Joao da Silva, Santo Angelo, Telêmaco Borba, Paraná</p>
-    </body>            
-</html>
+         <p>Rua Joao da Silva, Santo Angelo, Telêmaco Borba, Paraná</p>
+         <p>(42) 99999-99999</p>
+         <p> emailfulano@gmail.com</p>
+    </html>
+</body>
