--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <hr>
 
             <h2>Contato</h2>
-         <p>Rua Joao da Silva, Santo Angelo, Telêmaco Borba, Paraná</p>
+            <img src="./images/emdereco.png" width="25" height="25"> <p>Rua Joao da Silva, Santo Angelo, Telêmaco Borba, Paraná</p>
          <p>(42) 99999-99999</p>
          <p> emailfulano@gmail.com</p>
     </html>
