--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
             <h2>Contato</h2>
             <img src="./images/emdereco.png" width="25" height="25"> <p>Rua Joao da Silva, Santo Angelo, Telêmaco Borba, Paraná</p>
-         <p>(42) 99999-99999</p>
-         <p> emailfulano@gmail.com</p>
+            <img src="./images/telefone.jpg" width="25" height="25"> <p>(42) 99999-99999</p>
+            <img src="./images/email.jpg" width="25" height="25"> <p> emailfulano@gmail.com</p>
     </html>
 </body>
