--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
         </p>
         <hr>
         <h1>Formação Acadêmica</h1>
-        <p>Técnico em Informática para Internet pelo Instituto Federal do Paraná (2020) e Tecnologo em Análise e Desenvolvimento de 
-            Sistemas pela Universidade Tecnologica Federal do Paraná (2024).</p>
+     <p>Técnico em Informática para Internet pelo <a href="https://www.ifpr.edu.br"> Instituto Federal do Paraná (2020)</a> e Tecnologo em Análise e Desenvolvimento de Sistemas pela <a href="https://www.utfpr.edu.br"> Universidade Tecnologica Federal do Paraná (2024).</a>
+
+     </p>
             <hr>
             <h2>Experiência Profissional</h2>
             <p>Empresa X (2021-2022)</p>
@@ -41,8 +42,8 @@
             <hr>
 
             <h2>Contato</h2>
-            <img src="./images/emdereco.png" width="25" height="25"> <p>Rua Joao da Silva, Santo Angelo, Telêmaco Borba, Paraná</p>
-            <img src="./images/telefone.jpg" width="25" height="25"> <p>(42) 99999-99999</p>
+            <img src="./images/emdereco.png" width="25" height="25"> <p>Rua Joao da Silva, Santo Angelo, Telêmaco B
             <img src="./images/email.jpg" width="25" height="25"> <p> emailfulano@gmail.com</p>
     </html>
-</body>
+</body>orba, Paraná</p>
+            <img src="./images/telefone.jpg" width="25" height="25"> <p>(42) 99999-99999</p>
