--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-">
+        <meta charset="UTF-8">
         <title>Currículo de Fulano de Tal</title>
     </head>
     <body>
