--- a/index.html
+++ b/index.html
@@ -10,16 +10,12 @@
         <h1>NOME FULANO</h1>
         <hr>
         <h2>Perfil</h2>
-        <p>
-            Perfil Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem 
-            ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem 
-            ipsum
-        </p>
-        <p>
-            Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-             Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-             Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum.
-        </p>
+        <p> Perfil Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem 
+        ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem 
+         ipsum </p>
+          <p> Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+        Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+        Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum. </p>
         <hr>
         <h2>Principais Competências</h2>
         <p>
@@ -27,23 +23,25 @@
             Desenvolvimento FrontEnd;<br>
             Bla Bla;<br>
             Bla Bla;<br>
-            Bla Bla;<br>
-        </p>
+            Bla Bla;</p>
         <hr>
         <h1>Formação Acadêmica</h1>
-     <p>Técnico em Informática para Internet pelo <a href="https://www.ifpr.edu.br"> Instituto Federal do Paraná (2020)</a> e Tecnologo em Análise e Desenvolvimento de Sistemas pela <a href="https://www.utfpr.edu.br"> Universidade Tecnologica Federal do Paraná (2024).</a>
-
-     </p>
+        <p>Técnico em Informática para Internet pelo <a href="https://www.ifpr.edu.br"> Instituto Federal do Paraná (2020)</a> e Tecnologo em Análise e Desenvolvimento de Sistemas pela <a href="https://www.utfpr.edu.br"> Universidade Tecnologica Federal do Paraná (2024)</a>.</p>
             <hr>
             <h2>Experiência Profissional</h2>
-            <p>Empresa X (2021-2022)</p>
-            <p>Emoresa Y (2022-2024)</p>
-            <p>Empresa Z (2024-Atual)</p>
+            <p>
+                Empresa X (2021-2022)<br>
+                Emoresa Y (2022-2024)<br>
+                Empresa Z (2024-Atual)
+            </p>
             <hr>
-
             <h2>Contato</h2>
-            <img src="./images/emdereco.png" width="25" height="25"> <p>Rua Joao da Silva, Santo Angelo, Telêmaco B
-            <img src="./images/email.jpg" width="25" height="25"> <p> emailfulano@gmail.com</p>
-    </html>
-</body>orba, Paraná</p>
-            <img src="./images/telefone.jpg" width="25" height="25"> <p>(42) 99999-99999</p>
+            <P>
+                <img src="./images/emdereco.png" width="25" height="25"> <p>Rua Joao da Silva, Santo Angelo, Telêmaco B
+                <img src="./images/email.jpg" width="25" height="25"> <p> emailfulano@gmail.com</p>
+                <img src="./igmages/telefon<e.jpg" width="25" height="25"> <p>(42) 99999-99999</p>]
+            </p>
+    </body>
+</html>
+
+           
