--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
         <h1>NOME FULANO</h1>
         <hr>
         <h2>Perfil</h2>
-        <p> Perfil Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem 
-        ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem 
-         ipsum </p>
-          <p> Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-        Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-        Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum. </p>
+        <p> 
+            Perfil Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem 
+            ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem 
+            ipsum 
+        </p>
+        <p> 
+            Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+            Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+            Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum. 
+        </p>
         <hr>
         <h2>Principais Competências</h2>
         <p>
@@ -23,24 +27,32 @@
             Desenvolvimento FrontEnd;<br>
             Bla Bla;<br>
             Bla Bla;<br>
-            Bla Bla;</p>
+            Bla Bla;
+        </p>
         <hr>
         <h1>Formação Acadêmica</h1>
-        <p>Técnico em Informática para Internet pelo <a href="https://www.ifpr.edu.br"> Instituto Federal do Paraná (2020)</a> e Tecnologo em Análise e Desenvolvimento de Sistemas pela <a href="https://www.utfpr.edu.br"> Universidade Tecnologica Federal do Paraná (2024)</a>.</p>
-            <hr>
-            <h2>Experiência Profissional</h2>
-            <p>
-                Empresa X (2021-2022)<br>
-                Emoresa Y (2022-2024)<br>
-                Empresa Z (2024-Atual)
-            </p>
-            <hr>
-            <h2>Contato</h2>
-            <P>
-                <img src="./images/emdereco.png" width="25" height="25"> <p>Rua Joao da Silva, Santo Angelo, Telêmaco B
-                <img src="./images/email.jpg" width="25" height="25"> <p> emailfulano@gmail.com</p>
-                <img src="./igmages/telefon<e.jpg" width="25" height="25"> <p>(42) 99999-99999</p>]
-            </p>
+        <p>
+            Técnico em Informática para Internet pelo <a href="https://www.ifpr.edu.br"> Instituto Federal do Paraná (2020)</a>
+             e Tecnologo em Análise e Desenvolvimento de Sistemas pela 
+             <a href="https://www.utfpr.edu.br"> Universidade Tecnologica Federal do Paraná (2024)</a>.
+        </p>
+        <hr>
+        <h2>Experiência Profissional</h2>
+        <p>
+            Empresa X (2021-2022)<br>
+            Emoresa Y (2022-2024)<br>
+            Empresa Z (2024-Atual)
+        </p>
+        <hr>
+        <h2>Contato</h2>
+        <p>
+            <img src="./images/emdereco.png" width="25" height="25"> 
+            Rua Joao da Silva, Santo Angelo, Telêmaco Borba<br>
+            <img src="./images/email.jpg" width="25" height="25"> 
+            emailfulano@gmail.com<br>
+            <img src="./igmages/telefone.jpg" width="25" height="25"> 
+            (42) 99999-99999
+        </p>
     </body>
 </html>
 
