--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             Rua Joao da Silva, Santo Angelo, Telêmaco Borba<br>
             <img src="./images/email.jpg" width="25" height="25"> 
             emailfulano@gmail.com<br>
-            <img src="./igmages/telefone.jpg" width="25" height="25"> 
+            <img src="./images/telefone.jpg" width="25" height="25"> 
             (42) 99999-99999
         </p>
     </body>
